# bioversions

./: .bumpversion.cfg  .cruft.json  .flake8  MANIFEST.in  README.md  README.md.rej  justfile  pyproject.toml  pyproject.toml.rej  setup.cfg  tox.ini  tox.ini.rej
.github/: CONTRIBUTING.md  CONTRIBUTING.md.rej  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  codecov.yml
.github/workflows/: tests.yml  update.yml
_data/: versions.yml
docs/: _config.yml  charts.md  download.md  failures.md  index.md  summary.md
docs/_data/: versions.yml
docs/_includes/: footer.html  head.html
docs/source/: cli.rst  conf.py  index.rst  index.rst.rej  installation.rst  usage.rst  usage.rst.rej
src/bioversions/: __init__.py  __main__.py  __main__.py.rej  charts.py  cli.py  cli.py.rej  slack_client.py  twitter_client.py  update.py  utils.py  version.py  wsgi.py
src/bioversions/resources/: __init__.py  update.py  versions.json
src/bioversions/sources/: __init__.py  antibodyregistry.py  bigg.py  biofacquim.py  biogrid.py  ccle.py  cellosaurus.py  chebi.py  chembl.py  chemidplus.py  civic.py  complexportal.py  daily.py  depmap.py  dgi.py  disgenet.py  drugbank.py  drugcentral.py  ensembl.py  expasy.py  flybase.py  gtdb.py  guidetopharmacology.py  hgnc.py  homologene.py  hprd.py  icd10.py  icd11.py  icf.py  intact.py  interpro.py  itis.py  kegg.py  loinc.py  mesh.py  mgi.py  mirbase.py  moalmanac.py  msigdb.py  ncit.py  (+28 more)
src/bioversions/templates/: home.html
tests/: test_bioversions.py
