##########################
# Setup.py Configuration #
##########################
# Configuring setup()
[metadata]
name = bioversions
version = 0.5.342
description = What's the current version for each biological database?
long_description = file: README.md
long_description_content_type = text/markdown

# Links
url = https://github.com/biopragmatics/bioversions
download_url = https://github.com/biopragmatics/bioversions/releases
project_urls =
    Bug Tracker = https://github.com/biopragmatics/bioversions/issues

# Author information
author = Charles Tapley Hoyt
author_email = cthoyt@gmail.com
maintainer = Charles Tapley Hoyt
maintainer_email = cthoyt@gmail.com

# License information
license = MIT
license_file = LICENSE

# Search tags
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3 :: Only
keywords =
    databases
    biological databases

[options]
install_requires =
    requests
    requests_ftp
    beautifulsoup4
    cachier>=2.2.1
    pystow>=0.1.0
    click
    click_default_group
    dataclasses_json
    tabulate
    more_click
    pyyaml
    tqdm
    bioregistry[align]>=0.10.0
    pandas  # remove after deploying https://github.com/biopragmatics/bioregistry/pull/1047
    lxml
    psycopg2-binary

zip_safe = false
python_requires = >=3.8

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
slack =
    slack_sdk
twitter =
    tweepy
charts =
    matplotlib
    seaborn
web =
    flask
    bootstrap-flask

[options.entry_points]
console_scripts =
    bioversions = bioversions.cli:main

######################
# Doc8 Configuration #
# (doc8.ini)         #
######################
[doc8]
max-line-length = 120

##########################
# Coverage Configuration #
# (.coveragerc)          #
##########################
[coverage:run]
branch = True
source = bioversions
omit =
    tests/*
    docs/*
    src/bioversions/cli.py
    src/bioversions/__main__.py

[coverage:paths]
source =
    src/bioversions
    .tox/*/lib/python*/site-packages/bioversions

[coverage:report]
show_missing = True
exclude_lines =
    def __str__
    def __repr__

##########################
# Darglint Configuration #
##########################
[darglint]
docstring_style = sphinx
strictness = short

#########################
# Flake8 Configuration  #
# (.flake8)             #
#########################
[flake8]
ignore =
    S402
    S321
    E203
    W503
exclude =
    .tox,
    .git,
    __pycache__,
    docs/source/conf.py,
    build,
    dist,
    tests/fixtures/*,
    *.pyc,
    *.egg-info,
    .cache,
    .eggs,
    data
max-line-length = 120
max-complexity = 20
import-order-style = pycharm
application-import-names =
    bioversions
    tests
